fixed button alignment

--- a/assets/stylesheets/works-format.css
+++ b/assets/stylesheets/works-format.css
@@ -20,16 +20,15 @@ body.dark-mode {
 
 button {
   text-decoration: none;
-  height: 50px;
-  width: 120px;
+  height: 45px;
+  width: 100px;
   border: none;
   border-radius: 12px;
   background: linear-gradient(to left, #4e54c8, #8f94fb);;
   color: #181616;
   font-family: Verdana;
-  margin-bottom: 20px;
-  padding: 10px;
   transition: background-color 0.3s, color 0.3s;
+  margin: 50px;
 }
 
 .content {
